--- a/Bio/index.html
+++ b/Bio/index.html
@@ -247,7 +247,7 @@
 		
 		<footer>
 	
-		<p> <button class="btn"> instagram  </button> </p>
+		<p> <button class="btn"> <a href="https://www.instagram.com/_strayden" target="_blank"> instagram </a> </button> </p>
 		<p> <button class="btn">  <a href ="https://www.youtube.com/channel/UCs8es2Yr1tuE5PfJSfx2jbQ" target="_blank">YouTube</a> </button> </p>
 		<p> <button class="btn"> <a href= "https://twitter.com/strayhay?lang=ca" target="_blank"> Twitter  </a>  </button> </p> 
 		
