--- a/Bio/index.html
+++ b/Bio/index.html
@@ -77,7 +77,7 @@
 			
 	}
 		
-		#item1 img { width:500px;}
+		#item1 img { width:40%;}
 	
 		
 		
@@ -103,7 +103,7 @@
 		}
 		
 		
-		#item7 img{ width:600px;}
+		#item7 img{ width:40%;}
 		
 		
 		#item9 {flex: 100%;
@@ -121,7 +121,7 @@
 		display: flex;
 }
 		
-		#item11 img{ width: 700px;}
+		#item11 img{ width: 40%;}
 	
 		#item13 {flex: 100%;
 		background-color:#DFF0FF;
@@ -133,14 +133,15 @@
 		#item15 {flex: 100%;
 		background-color:transparent;
 		color:darkcyan;
-			display: flex;
+			justify-content:center;
 			align-items:center;
-			justify-content:center;}
+			display: flex;
+		margin-left:30%}
 		
 		
 		
 		
-		
+		#item15 img{ width: 40% }
 		
 	
 	
@@ -224,7 +225,7 @@
 	 
 	<div class="row" id="item7"> <img src="images/eye2.jpg" alt="eye"> </div>
 			
-	<div class="row" id="item9"> <h2> Music taste </h2> <p> Hayden's music taste includes a wide variety of different music generes. He will listen to anything thats on the radio or what ever people play around him, but his main choice of music is primarly hyper pop, a combination of EDM and pop music, and punk rock. Other generes also include hip hop and sea shanties</p></div>
+	<div class="row" id="item9"> <h2> Music taste </h2> <p> Hayden's music taste includes a wide variety of different music generes. He will listen to anything thats on the radio or what ever people play around him, but his main choice of music is primarly hyper pop, a combination of EDM and pop music, and punk rock. Other generes also include hip hop and sea shanties.</p></div>
 	 
 	<div class="row" id="item11"> <img src="images/punk2.png" alt="punk"> </div>
 			
