--- a/Bio/index.html
+++ b/Bio/index.html
@@ -248,9 +248,9 @@
 		
 		<footer>
 	
-		<p> <button class="btn"> <a href="https://www.instagram.com/_strayden" target="_blank"> instagram </a> </button> </p>
-		<p> <button class="btn">  <a href ="https://www.youtube.com/channel/UCs8es2Yr1tuE5PfJSfx2jbQ" target="_blank">YouTube</a> </button> </p>
-		<p> <button class="btn"> <a href= "https://twitter.com/strayhay?lang=ca" target="_blank"> Twitter  </a>  </button> </p> 
+		<p> <button class="btn">  Site Construction </button> </p>
+		<p> <button class="btn"> Basic Interaction </button> </p>
+		<p> <button class="btn"> object properties  </button> </p> 
 		
 		
 		</footer>
